# homework-25

EX1/: CMakeLists.txt
EX1/include/: header.h
EX1/src/: CMakeLists.txt  EX1.cpp
EX11/: CMakeLists.txt
EX11/src/: CMakeLists.txt  EX11.cpp
EX2/: CMakeLists.txt
EX2/include/: cpu.h  disk.h  gpu.h  keyboard.h  ram.h
EX2/src/: CMakeLists.txt  EX2.cpp  cpu.cpp  disk.cpp  gpu.cpp  keyboard.cpp  ram.cpp
